--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,6 +21,7 @@
 
 html {
   scroll-behavior: smooth;
+  scroll-padding-top: 100px;
 }
 
 :root {
